# UNICORN2

./: .gitignore  .lsp-session-v1  AGENTS.md  README.md  custom.el  early-init.el  early-init.el~  history  init.el  places  projectile-bookmarks.eld  recentf  todos.org
config_snippets/R/: .lintr
config_snippets/cpp/: .clangd  CMakeLists.txt
config_snippets/python/: MANIFEST.in  cythonize_package.py  matplotlibrc  pyrightconfig.json  setup.cfg
config_snippets/python/.opencode/: memory.md
eln-cache/30.0.50-bd180968/: ansi-color-75eac800-8d1cfab0.eln  ansi-osc-b447f6a8-03cbba92.eln  auth-source-49df7eef-8cf3fa2d.eln  browse-url-87f72988-3174bd09.eln  cl-extra-d7051cba-2232ae95.eln  cl-lib-8b938900-988d5c47.eln  cl-macs-7ae82f81-8cf5a788.eln  cl-seq-f464c4e2-5f2e2b69.eln  gv-e0cf7478-3bfe10e5.eln  (+41 more)
lisp/: init-c-c++.el  init-claude.el  init-const.el  init-corfu.el  init-custom-vars.el  init-default.el  init-dired.el  init-dockerfile.el  init-eglot.el  init-elisp.el  init-evil.el  init-flycheck.el  init-flymake.el  init-font.el  init-general-functions.el  init-gpt.el  init-highlight.el  init-ibuffer.el  init-java.el  init-json.el  init-layout.el  init-lsp-ess.el  init-lsp-golang.el  init-lsp-python.el  init-lsp.el  init-markdown.el  init-misc.el  init-opencode.el  init-org.el  init-package-management.el  init-program-basis.el  init-project.el  init-shell.el  init-sql.el  init-tool.el  init-treemacs.el  init-treesit.el  init-ts.el  init-ui.el  init-version-control.el  (+6 more)
persp-confs/: persp-auto-save  persp-auto-save1  persp-auto-save2  persp-auto-save3
quelpa/: cache
(+1459 files in other folders)
