[metadata]
name = avatar
version = 0.3.0
author = peter.linyi
author_email = peter.linyi159@gmail.com
description = A trainer package for NLP on deep learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires=
	Click
python_requires = >=3.6
include_package_data=True

[options.entry_points]
console_scripts=
	avatar=avatar:cli

[options.packages.find]
where = src